--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "express": "~4.0.0",
     "mongoose": "~3.8.8",
-    "body-parser": "~1.0.1"
+    "body-parser": "~1.0.1",
+    "morgan": "~1.6.0"
   },
   "license": "MIT"
 }
