--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "~4.0.0",
     "mongoose": "~3.8.8",
     "body-parser": "~1.0.1",
-    "morgan": "~1.6.0"
+    "morgan": "~1.6.0",
+    "file-stream-rotator": "~0.0.6"
   },
   "license": "MIT"
 }
